fix #1: stick footer to bottom on smaller pages

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #333;
   background-color: #fff;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 body.dark {
   color: #fff;
@@ -96,7 +99,9 @@ hr {
 .container-sm {
   margin: 0 auto;
   padding: 1rem;
+  padding-bottom: 2.5rem;
   max-width: 1024px;
+  width: calc(100% - 2rem);
 }
 .container-sm {
   max-width: 640px;
@@ -217,8 +222,13 @@ body.dark .section-title {
 .card-grid {
   display: grid;
   grid-auto-rows: auto;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 1.5rem;
+}
+@media screen and (min-width: 640px) {
+  .card-grid {
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  }
 }
 .card {
   padding: 1rem;
