--- a/stylus/base/body.styl
+++ b/stylus/base/body.styl
@@ -4,6 +4,9 @@ body
   font-family default_font
   color text_color
   background-color bg_color
+  min-height 100vh
+  display grid
+  grid-template-rows auto 1fr auto
 
   &.dark
     color text_color_dark
