--- a/stylus/components/card.styl
+++ b/stylus/components/card.styl
@@ -1,8 +1,12 @@
 .card-grid
   display grid
   grid-auto-rows auto
-  grid-template-columns repeat(auto-fill, minmax(320px, 1fr))
+  grid-template-columns repeat(auto-fill, minmax(280px, 1fr))
   gap 1.5rem
+
+  @media screen and (min-width breakpoints.sm)
+    grid-template-columns repeat(auto-fill, minmax(320px, 1fr))
+
 
 .card
   padding 1rem
