--- a/stylus/layout/container.styl
+++ b/stylus/layout/container.styl
@@ -1,7 +1,9 @@
 .container
   margin 0 auto
   padding 1rem
+  padding-bottom 2.5rem
   max-width breakpoints.lg
+  width calc(100% - 2rem)
 
 .container-sm
   @extend .container
